components/longhorn/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-websecure
  labels:
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
  annotations:
    gethomepage.dev/href: "https://longhorn.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: longhorn.png
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: http
  tls:
    certResolver: letsencrypt
